--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ body{
 	padding: 0px;
 
 }
+
 .header {
 	align-items: center;
 	background-color: #000000;
@@ -104,6 +105,7 @@ h5{padding: 60px;}
 	display: flex;
 	margin-left: auto;
 	margin-right: auto;
+	margin-bottom: 0px;
 	padding: 0px;
 }
 h5{
