--- a/Front-end-Projects/github_page/styles/darkmode.css
+++ b/Front-end-Projects/github_page/styles/darkmode.css
@@ -1,7 +1,4 @@
 
-@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap);
-
 body{
     display: flex;
     align-items: center;
@@ -11,17 +8,24 @@ body{
     background-color: #222222;
     background-image: url(Images/Background_Dark.svg);
     background-repeat: no-repeat;
-    background-position: 50% 0;
+    background-position: top center;
     color: #FFFFFF;
-    font-family: poppins;
+    font-family: poppins, Verdana, Tahoma, sans-serif;
+    overflow: auto;
+}
+
+#nav_wrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 550px;
 }
 
 .nav_bar_container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-self: stretch;
     gap: 7.62px;
-    max-width: 1400px;
     box-shadow: 0px 17.88132667541504px 27.71605682373047px 0px #00000040;
     background: #101010;
     border-radius: 10px;
@@ -33,7 +37,7 @@ body{
     background-color: #2C2C2C;
     display: flex;
     align-items: center;
-    width: 100%;
+    align-self: stretch;
     padding: 15px 19px;
     flex-direction: row;
     column-gap: 35px;
@@ -44,7 +48,7 @@ body{
 }
 
 h1{
-    font-family: inter;
+    font-family: inter, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 19px;
     line-height: 23px;
     font-weight: 400;
@@ -52,7 +56,7 @@ h1{
 }
 
 h2{
-    font-family: inter;
+    font-family: inter, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 13px;
     font-weight: 200;
     line-height: 16px;
@@ -79,19 +83,26 @@ h2{
 }
 
 a{
+    border-radius: 10px;
+    padding: 15px;
     text-decoration: none;
     color: #FFFFFF;
 }
 
 .icon_card_container{
     display: flex;
-    padding-top: 18px;
-    padding-bottom: 18px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: stretch;
     flex-grow: 1;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.2s ease-in background-color;
+}
+
+.icon_card_container:hover{
+    background-color: #2C2C2C;
 }
 
 .icon_img{
@@ -112,7 +123,7 @@ a{
 
 #resume_button{
     display: flex;
-    width: 100%;
+    align-self: stretch;
     flex-direction: column;
     padding: 14px 0px;
     align-items: center;
@@ -120,15 +131,21 @@ a{
     border-radius: 10px;
     background: #ffffff;
     outline: 0;
-    border: 0;
+    border: 0 solid white;
+    transition: .45s ease-in-out border;
+    
+}
+
+#resume_button:hover{
+    border: 4px solid #2C2C2C;
 }
 
 .content_wrapper{
     display: flex;
     flex-direction: column;
     column-gap: 22px;
-    width: 98%;
-    max-width: 1400px;
+    width: 100%;
+    max-width: 550px;
 }
 
 .content_container{
@@ -249,6 +266,16 @@ li{
     align-self: stretch;
 }
 
+.mode_toggle{
+    cursor: pointer;
+    transform: scale(1);
+    transition: all .3s ease;
+}
+
+.mode_toggle:hover{
+    transform: scale(1.1);
+}
+
 @media (min-width: 1240px) {
     
     body{
@@ -260,13 +287,21 @@ li{
         background-image: url(Images/Background_Dark.svg);
         background-repeat: no-repeat;
         color: #FFFFFF;
-        font-family: poppins;
+        font-family: poppins, Verdana, Tahoma, sans-serif;
+        overflow: auto;
     }
+    
+    #nav_wrapper{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 1120px;
+    }    
 
     .nav_bar_container{
         display: flex;
         flex-direction: row;
-        width: 100%;
+        align-self: stretch;
         box-shadow: 0px 17.88132667541504px 27.71605682373047px 0px #00000040;
         background: #101010;
         border-radius: 10px;
@@ -276,61 +311,74 @@ li{
     #profile_container{
         background-color: #2C2C2C;
         display: flex;
+        width: 45%;
         align-items: center;
-        width: 100%;
-        padding: 18px 65px 18px 65px;
+        padding: 8px 8px 8px 52px;
         flex-direction: row;
-        column-gap: 35px;
-        max-width: 500px;
+        column-gap: 25px;
+        max-width: 1000px;
     }
 
     #profile_pic{
-        max-width: 73px;
+        max-width: 60px;
     }
 
     h1{
-        line-height: 31px;
-        font-size: 25px;
+        line-height: 26px;
+        font-size: 22px;
         font-weight: 400;
         margin: 0;
     }
     
     h2{
-        font-size: 17px;
+        font-size: 13px;
         font-weight: 200;
-        line-height: 25px;
+        line-height: 22px;
     }
 
     #icons_container{
-        padding: 12px 80px 12px 80px;
-        column-gap: 40px;
+        display: flex;
+        width: 35%;
+        padding: 8px 80px 8px 80px;
+        column-gap: 35px;
     }
 
     .icon_subtitle{
-        line-height: 21px;
+        line-height: 20px;
         padding-top: 5px;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 12px;
         margin: 0px;
         text-align: center;
     }
-
     
     .icon_card_container{
+        background-color: transparent;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
+
     .icon_img{
         padding-left: 13px;
         padding-right: 13px;
-        width: 34px;
+        width: 25px;
     }
+
+    .button_text{
+    padding-top: 5px;
+    font-weight: 300;
+    font-size: 12px;
+    margin: 0px;
+    line-height: 20px;
+    text-align: center;
+    color: #101010;
+}
 
     #resume_button{
         display: flex;
-        width: 100%;
+        width: 19%;
         max-width: 220px;
         flex-direction: column;
         align-items: center;
@@ -344,14 +392,16 @@ li{
     .content_wrapper{
         display: flex;
         flex-direction: row;
-        column-gap: 22px;
-        width: 100%;
-        max-width: 1400px;
+        column-gap: 20px;
+        align-self: center;
+        max-width: 1120px;
     }
+
+
     
     .content_container{
         width: 55%;
-        margin-top: 37px;
+        margin-top: 30px;
         padding: 24px;
         background-color: #232323;
         border: 5px solid #2F2F2F;
@@ -361,14 +411,14 @@ li{
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 23.46px;
+        gap: 20px;
     }
     
     h3{
         text-transform: uppercase;
         font-weight: 700;
-        font-size: 19px;
-        line-height: 28px;
+        font-size: 16px;
+        line-height: 22px;
         margin: 0;
     }
     
@@ -382,14 +432,14 @@ li{
         line-height: 21px;
         margin: 0;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 12px;
         flex-grow: 1;
     }
     
     .year{
         font-weight: 700;
         margin: 0;
-        font-size: 12px;
+        font-size: 11px;
         line-height: 18px;
         color: #7D7D7D;
         flex-grow: 0;
@@ -399,7 +449,7 @@ li{
         margin: 0;
         line-height: 18px;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 11px;
         color: #BBBBBB;
     }
     
@@ -413,7 +463,7 @@ li{
     
     li{
         font-weight: 400;
-        font-size: 13px;
+        font-size: 12px;
         line-height: 180%;
     }
     
@@ -441,20 +491,28 @@ li{
     
     .body_text{
         font-weight: 400;
-        font-size: 13px;
+        font-size: 12px;
         line-height: 180%;
     }
     
     #education{
         font-weight: 500;
-        font-size: 14px;
+        font-size: 13px;
         line-height: 21px;
     }
     
     #education_subtitle{
         font-weight: 700;
-        font-size: 12px;
+        font-size: 11px;
         line-height: 16px;
+    }
+
+    #toggle_wrapper{
+        max-width: 1120px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-self: center;
     }
 
     .toggle_container{
@@ -468,7 +526,8 @@ li{
         border-radius: 10px;
         align-self: flex-start;
     }
-    
 
+    #toggle_text{
+        font-size: 14px;
+    }
 }
-
