--- a/Front-end-Projects/github_page/styles/lightmode.css
+++ b/Front-end-Projects/github_page/styles/lightmode.css
@@ -1,5 +1,3 @@
-@import url(https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap);
-@import url(https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&display=swap);
 
 body{
     display: flex;
@@ -7,26 +5,41 @@ body{
     flex-direction: column;
     justify-content: center;
     padding: 33px 22px 90px 22px;
-    background-color: #9da0ad;
-    background-image: url(Images/Background_Light.svg);
-    background-size: cover;
-    background-position: 50% 0;
-    background-repeat: no-repeat;
+    background-color: #222222;
+    background-image: linear-gradient(29.93deg, #42496F 0%, rgba(66, 73, 111, 0) 37.51%),
+        linear-gradient(186.09deg, #434F6C 0%, rgba(67, 79, 108, 0) 39.79%),
+        linear-gradient(235.04deg, #45637B 1.66%, rgba(69, 99, 123, 0) 52.55%),
+        linear-gradient(71.3deg, #725648 6.08%, rgba(114, 86, 72, 0) 81.88%),
+        linear-gradient(161.8deg, #795E65 5.13%, rgba(121, 94, 101, 0) 23.4%),
+        linear-gradient(293.67deg, #7F5E64 10.87%, rgba(126, 94, 98, 0) 83.24%),
+        linear-gradient(0deg, #FFFFFF, #FFFFFF),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
     color: #FFFFFF;
-    font-family: poppins;
+    background-repeat: no-repeat; 
+    background-position: top center;
+    background-attachment: fixed;       
+    background-size: 100vw auto;
+    font-family: poppins, Verdana, Tahoma, sans-serif;
+    overflow: auto;
+}
+
+#nav_wrapper{
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    max-width: 550px;
 }
 
 .nav_bar_container{
     display: flex;
     flex-direction: column;
-    width: 100%;
+    align-self: stretch;
     gap: 7.62px;
-    max-width: 1400px;
     box-shadow: 0px 17.88132667541504px 27.71605682373047px 0px #00000040;
-    background-image: url("Images/ProfileContainerLightbg.svg");
-    background-position: 50% 0;
+    background: linear-gradient(126.73deg, #2C2939 0%, rgba(44, 41, 57, 0) 25.65%), linear-gradient(292.27deg, #292B35 0%, rgba(41, 43, 53, 0) 26.75%), linear-gradient(41.39deg, #50353B 11.36%, rgba(80, 53, 59, 0) 76.79%), linear-gradient(204.35deg, #352C21 9.85%, rgba(53, 44, 33, 0) 50.28%);
+    background-position: center center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size:cover;
     background-color: #101010;
     border-radius: 10px;
     overflow: hidden;
@@ -37,7 +50,7 @@ body{
     border-bottom: 1px solid rgba(255, 255, 255, 0.065);
     display: flex;
     align-items: center;
-    width: 100%;
+    align-self: stretch;
     padding: 15px 19px;
     flex-direction: row;
     column-gap: 35px;
@@ -48,7 +61,7 @@ body{
 }
 
 h1{
-    font-family: inter;
+    font-family: inter, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 19px;
     line-height: 23px;
     font-weight: 400;
@@ -56,7 +69,7 @@ h1{
 }
 
 h2{
-    font-family: inter;
+    font-family: inter, 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-size: 13px;
     font-weight: 200;
     line-height: 16px;
@@ -83,19 +96,26 @@ h2{
 }
 
 a{
+    border-radius: 10px;
+    padding: 15px;
     text-decoration: none;
     color: #FFFFFF;
 }
 
 .icon_card_container{
     display: flex;
-    padding-top: 18px;
-    padding-bottom: 18px;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     align-self: stretch;
     flex-grow: 1;
+    border-radius: 10px;
+    background-color: rgba(255, 255, 255, 0);
+    transition: 0.2s ease-in background-color;
+}
+
+.icon_card_container:hover{
+    background-color: #352820;
 }
 
 .icon_img{
@@ -116,7 +136,7 @@ a{
 
 #resume_button{
     display: flex;
-    width: 100%;
+    align-self: stretch;
     flex-direction: column;
     padding: 14px 0px;
     align-items: center;
@@ -124,26 +144,30 @@ a{
     border-radius: 10px;
     background: #ffffff;
     outline: 0;
-    border: 0;
+    border: 0 solid white;
+    transition: .45s ease-in-out border;
+    
+}
+
+#resume_button:hover{
+    border: 4px solid #352820;
 }
 
 .content_wrapper{
     display: flex;
     flex-direction: column;
     column-gap: 22px;
-    width: 98%;
-    max-width: 1400px;
+    width: 100%;
+    max-width: 550px;
 }
 
 .content_container{
     margin-top: 37px;
     padding: 24px;
-    border: 5px solid #2F2F2F;
     border-radius: 10px;
     background: rgba(255, 255, 255, 0.9);
     color: black;
-    border: 0;
-    outline: 6px solid rgba(255, 255, 255, 0.3);
+    box-shadow: 0 0 0 6px  rgba(255, 255, 255, 0.3);
 
     display: flex;
     flex-direction: column;
@@ -244,7 +268,7 @@ li{
 }
 
 .toggle_container{
-    color:#222222;
+    color:#000000;
     margin-top: 60px;
     display: flex;
     flex-direction: row;
@@ -256,6 +280,15 @@ li{
     align-self: stretch;
 }
 
+.mode_toggle{
+    cursor: pointer;
+    transform: scale(1);
+    transition: all .3s ease;
+}
+
+.mode_toggle:hover{
+    transform: scale(1.1);
+}
 
 @media (min-width: 1240px) {
     
@@ -264,24 +297,37 @@ li{
         align-items: center;
         justify-content: center;
         padding: 36px 36px 36px 36px;
-        background-color: #ffffff;
-        background-image: url(Images/Background_Light.svg);
-        background-size: cover;
-        background-position: 50% 0;
-        background-repeat: no-repeat;
+        background-color: #222222;
+        background-image: linear-gradient(29.93deg, #42496F 0%, rgba(66, 73, 111, 0) 37.51%),
+        linear-gradient(186.09deg, #434F6C 0%, rgba(67, 79, 108, 0) 39.79%),
+        linear-gradient(235.04deg, #45637B 1.66%, rgba(69, 99, 123, 0) 52.55%),
+        linear-gradient(71.3deg, #725648 6.08%, rgba(114, 86, 72, 0) 81.88%),
+        linear-gradient(161.8deg, #795E65 5.13%, rgba(121, 94, 101, 0) 23.4%),
+        linear-gradient(293.67deg, #7F5E64 10.87%, rgba(126, 94, 98, 0) 83.24%),
+        linear-gradient(0deg, #FFFFFF, #FFFFFF),
+        linear-gradient(0deg, rgba(255, 255, 255, 0.05), rgba(255, 255, 255, 0.05));
+        
         color: #FFFFFF;
-        font-family: poppins;
+        font-family: poppins, Verdana, Tahoma, sans-serif;
+        overflow: auto;
     }
 
+    #nav_wrapper{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        max-width: 1120px;
+    }    
+
     .nav_bar_container{
-        background-image: url("Images/ProfileContainerLightbg.svg");
-        background-position: 50% 0;
+        background: linear-gradient(126.73deg, #2C2939 0%, rgba(44, 41, 57, 0) 25.65%), linear-gradient(292.27deg, #292B35 0%, rgba(41, 43, 53, 0) 26.75%), linear-gradient(41.39deg, #50353B 11.36%, rgba(80, 53, 59, 0) 76.79%), linear-gradient(204.35deg, #352C21 9.85%, rgba(53, 44, 33, 0) 50.28%);
+        background-position: center center;
         background-repeat: no-repeat;
         background-size: cover;
         background-color: #101010;
         display: flex;
         flex-direction: row;
-        width: 100%;
+        align-self: stretch;
         box-shadow: 0px 17.8813px 27.7161px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
         overflow: hidden;
@@ -291,62 +337,75 @@ li{
         background-color: transparent;
         border-right: 1px solid rgba(255, 255, 255, 0.191);
         display: flex;
+        width: 45%;
         align-items: center;
-        width: 100%;
-        padding: 18px 65px 18px 65px;
+        padding: 8px 8px 8px 52px;
         flex-direction: row;
-        column-gap: 35px;
-        max-width: 500px;
+        column-gap: 25px;
+        max-width: 1000px;
     }
 
     #profile_pic{
-        max-width: 73px;
+        max-width: 60px;
     }
 
     h1{
-        line-height: 31px;
-        font-size: 25px;
+        line-height: 26px;
+        font-size: 22px;
         font-weight: 400;
         margin: 0;
     }
     
     h2{
-        font-size: 17px;
+        font-size: 13px;
         font-weight: 200;
-        line-height: 25px;
+        line-height: 22px;
     }
 
     #icons_container{
+        display: flex;
         background-color: transparent;
-        padding: 12px 80px 12px 80px;
-        column-gap: 40px;
+        width: 35%;
+        padding: 8px 80px 8px 80px;
+        column-gap: 35px;
     }
 
     .icon_subtitle{
-        line-height: 21px;
+        line-height: 20px;
         padding-top: 5px;
         font-weight: 400;
-        font-size: 14px;
+        font-size: 12px;
         margin: 0px;
         text-align: center;
     }
-
     
     .icon_card_container{
+        background-color: transparent;
         display: flex;
         align-items: center;
         justify-content: center;
     }
 
+
     .icon_img{
         padding-left: 13px;
         padding-right: 13px;
-        width: 34px;
+        width: 25px;
+    }
+
+    .button_text{
+        padding-top: 5px;
+        font-weight: 300;
+        font-size: 12px;
+        margin: 0px;
+        line-height: 20px;
+        text-align: center;
+        color: #101010;
     }
 
     #resume_button{
         display: flex;
-        width: 100%;
+        width: 19%;
         max-width: 220px;
         flex-direction: column;
         align-items: center;
@@ -360,34 +419,33 @@ li{
     .content_wrapper{
         display: flex;
         flex-direction: row;
-        column-gap: 22px;
-        width: 100%;
-        max-width: 1400px;
+        column-gap: 20px;
+        align-self: center;
+        max-width: 1120px;
     }
+
+    
     
     .content_container{
         width: 55%;
-        margin-top: 37px;
+        margin-top: 30px;
         padding: 24px;
         background: rgba(255, 255, 255, 0.9);
-        backdrop-filter: blur(18.1837px);
         color: black;
-        border: 0;
-        outline: 6px solid rgba(255, 255, 255, 0.3);
+        box-shadow: 6px solid rgba(255, 255, 255, 0.3);
         border-radius: 10px;
-        box-shadow: none;
     
         display: flex;
         flex-direction: column;
         align-items: flex-start;
-        gap: 23.46px;
+        gap: 20px;
     }
     
     h3{
         text-transform: uppercase;
         font-weight: 700;
-        font-size: 19px;
-        line-height: 28px;
+        font-size: 16px;
+        line-height: 22px;
         margin: 0;
     }
     
@@ -401,14 +459,14 @@ li{
         line-height: 21px;
         margin: 0;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 12px;
         flex-grow: 1;
     }
     
     .year{
         font-weight: 700;
         margin: 0;
-        font-size: 12px;
+        font-size: 11px;
         line-height: 18px;
         color: #7D7D7D;
         flex-grow: 0;
@@ -418,7 +476,7 @@ li{
         margin: 0;
         line-height: 18px;
         font-weight: 700;
-        font-size: 12px;
+        font-size: 11px;
         color: #BBBBBB;
     }
     
@@ -432,7 +490,7 @@ li{
     
     li{
         font-weight: 400;
-        font-size: 13px;
+        font-size: 12px;
         line-height: 180%;
     }
     
@@ -460,24 +518,32 @@ li{
     
     .body_text{
         font-weight: 400;
-        font-size: 13px;
+        font-size: 12px;
         line-height: 180%;
     }
     
     #education{
         font-weight: 500;
-        font-size: 14px;
+        font-size: 13px;
         line-height: 21px;
     }
     
     #education_subtitle{
         font-weight: 700;
-        font-size: 12px;
+        font-size: 11px;
         line-height: 16px;
+    }
+
+    #toggle_wrapper{
+        max-width: 1120px;
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-self: center;
     }
     
     .toggle_container{
-        color:#222222;
+        color:#000000;
         margin-top: 60px;
         display: flex;
         flex-direction: row;
@@ -489,4 +555,7 @@ li{
         align-self: flex-start;
     }
 
+    #toggle_text{
+        font-size: 14px;
+    }
 }
